@@ -2,7 +2,7 @@
  * This library is part of OpenCms -
  * the Open Source Content Management System
  *
- * Copyright (c) Alkacon Software GmbH (http://www.alkacon.com)
+ * Copyright (c) Alkacon Software GmbH & Co. KG (http://www.alkacon.com)
  *
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Lesser General Public
@@ -14,12 +14,12 @@
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
  * Lesser General Public License for more details.
  *
- * For further information about Alkacon Software GmbH, please see the
+ * For further information about Alkacon Software GmbH & Co. KG, please see the
  * company website: http://www.alkacon.com
  *
  * For further information about OpenCms, please see the
  * project website: http://www.opencms.org
- * 
+ *
  * You should have received a copy of the GNU Lesser General Public
  * License along with this library; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
@@ -52,15 +52,19 @@ import org.opencms.publish.CmsPublishManager;
 import org.opencms.scheduler.CmsScheduleManager;
 import org.opencms.scheduler.CmsScheduledJobInfo;
 import org.opencms.security.CmsDefaultAuthorizationHandler;
+import org.opencms.security.CmsDefaultCredentialsResolver;
 import org.opencms.security.CmsDefaultValidationHandler;
 import org.opencms.security.CmsRoleViolationException;
 import org.opencms.security.I_CmsAuthorizationHandler;
+import org.opencms.security.I_CmsCredentialsResolver;
 import org.opencms.security.I_CmsPasswordHandler;
 import org.opencms.security.I_CmsValidationHandler;
 import org.opencms.site.CmsSite;
 import org.opencms.site.CmsSiteManagerImpl;
 import org.opencms.site.CmsSiteMatcher;
 import org.opencms.util.CmsStringUtil;
+import org.opencms.workflow.CmsDefaultWorkflowManager;
+import org.opencms.workflow.I_CmsWorkflowManager;
 import org.opencms.xml.containerpage.CmsADECacheSettings;
 
 import java.util.ArrayList;
@@ -68,21 +72,31 @@ import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Iterator;
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
 
 import org.apache.commons.digester.Digester;
+import org.apache.commons.lang.StringUtils;
 import org.apache.commons.logging.Log;
 
 import org.dom4j.Element;
 
 /**
  * System master configuration class.<p>
- * 
+ *
  * @since 6.0.0
  */
 public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
+
+    /** Enum for the user session mode. */
+    public enum UserSessionMode {
+        /** Only a single session per user is allowed. */
+        single,
+        /** Any number of sessions for a user are allowed. */
+        standard
+    }
 
     /** The attribute name for the deleted node. */
     public static final String A_DELETED = "deleted";
@@ -90,14 +104,17 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
     /** The "error" attribute. */
     public static final String A_ERROR = "error";
 
+    /** The "errorPage" attribute. */
+    public static final String A_ERROR_PAGE = "errorPage";
+
     /** The "exclusive" attribute. */
     public static final String A_EXCLUSIVE = "exclusive";
 
+    /** The attribute name for the localization mode. */
+    public static final String A_LOCALIZATION_MODE = "localizationMode";
+
     /** The "maxvisited" attribute. */
     public static final String A_MAXVISITED = "maxvisited";
-
-    /** The "mode" attribute. */
-    public static final String A_MODE = "mode";
 
     /** The "offline" attribute. */
     public static final String A_OFFLINE = "offline";
@@ -111,11 +128,29 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
     /** The "poolname" attribute. */
     public static final String A_POOLNAME = "poolname";
 
+    /** The "position" attribute. */
+    public static final String A_POSITION = "position";
+
     /** The "server" attribute. */
     public static final String A_SERVER = "server";
 
+    /** The "security" attribute. */
+    public static final String A_SECURITY = "security";
+
+    /** The "title" attribute. */
+    public static final String A_TITLE = "title";
+
+    /** The "usePermanentRedirects" attribute. */
+    public static final String A_USE_PERMANENT_REDIRECTS = "usePermanentRedirects";
+
+    /** The "webserver" attribute. */
+    public static final String A_WEBSERVER = "webserver";
+
     /** The name of the DTD for this configuration. */
     public static final String CONFIGURATION_DTD_NAME = "opencms-system.dtd";
+
+    /** The default user session mode. */
+    public static final UserSessionMode DEFAULT_USER_SESSION_MODE = UserSessionMode.standard;
 
     /** The name of the default XML file for this configuration. */
     public static final String DEFAULT_XML_FILE_NAME = "opencms-system.xml";
@@ -309,6 +344,9 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
     /** The node name for the job parameters. */
     public static final String N_PARAMETERS = "parameters";
 
+    /** Node name for the password change interval. */
+    public static final String N_PASSWORD_CHANGE_INTERVAL = "passwordChangeInterval";
+
     /** The node name for the password encoding. */
     public static final String N_PASSWORDENCODING = "encoding";
 
@@ -323,6 +361,9 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
 
     /** The node name for the context project name. */
     public static final String N_PROJECT = "project";
+
+    /** The node name for the publish list remove mode. */
+    public static final String N_PUBLISH_LIST_REMOVE_MODE = "publish-list-remove-mode";
 
     /** The node name for the "publishhistory" section. */
     public static final String N_PUBLISHMANAGER = "publishmanager";
@@ -359,6 +400,9 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
 
     /** The node name for the resource init classes. */
     public static final String N_RESOURCEINITHANDLER = "resourceinithandler";
+
+    /** Node name for the restrict-detail-contents option. */
+    public static final String N_RESTRICT_DETAIL_CONTENTS = "restrict-detail-contents";
 
     /** the result cache node. */
     public static final String N_RESULTCACHE = "resultcache";
@@ -462,8 +506,14 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
     /** The node name for the time zone configuration. */
     public static final String N_TIMEZONE = "timezone";
 
+    /** Node name for the authorization token lifetime. */
+    public static final String N_TOKEN_LIFETIME = "tokenLifetime";
+
     /** The node name for the user-admin node. */
     public static final String N_USER_ADMIN = "user-admin";
+
+    /** Node name for the user data check interval. */
+    public static final String N_USER_DATA_CHECK_INTERVAL = "userDataCheckInterval";
 
     /** The node name for the user-deletedresource node. */
     public static final String N_USER_DELETEDRESOURCE = "user-deletedresource";
@@ -486,17 +536,35 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
     /** The node name for the warning-interval node. */
     public static final String N_WARNING_INTERVAL = "warning-interval";
 
+    /** The node name for the workflow configuration. */
+    public static final String N_WORKFLOW = "workflow";
+
     /** The node name for the workplace-server node. */
     public static final String N_WORKPLACE_SERVER = "workplace-server";
 
     /** The log object for this class. */
     private static final Log LOG = CmsLog.getLog(CmsSystemConfiguration.class);
 
+    /** Node name for the credentials resolver setting. */
+    private static final String N_CREDENTIALS_RESOLVER = "credentials-resolver";
+
+    /** Node name for the user max inactive time. */
+    private static final String N_MAX_INACTIVE_TIME = "maxInactiveTime";
+
+    /** Node name for the element reuse mode. */
+    private static final String N_REUSE_ELEMENTS = "reuse-elements";
+
+    /** Node name for the user session mode. */
+    private static final String N_USER_SESSION_MODE = "user-session-mode";
+
     /** The ADE cache settings. */
     private CmsADECacheSettings m_adeCacheSettings;
 
     /** The ADE configuration. */
     private String m_adeConfiguration;
+
+    /** The ADE configuration parameters. */
+    private Map<String, String> m_adeParameters = new LinkedHashMap<String, String>();
 
     /** The authorization handler. */
     private String m_authorizationHandler;
@@ -515,6 +583,12 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
 
     /** The list of jobs for the scheduler. */
     private List<CmsScheduledJobInfo> m_configuredJobs;
+
+    /** The credentials resolver instance. */
+    private I_CmsCredentialsResolver m_credentialsResolver;
+
+    /** The configured credentials resolver class name. */
+    private String m_credentialsResolverClass;
 
     /** The default content encoding. */
     private String m_defaultContentEncoding;
@@ -559,6 +633,9 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
     /** The permission handler. */
     private String m_permissionHandler;
 
+    /** The configured publish list remove mode. */
+    private String m_publishListRemoveMode;
+
     /** The configured publish manager. */
     private CmsPublishManager m_publishManager;
 
@@ -567,6 +644,9 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
 
     /** A list of instantiated resource init handler classes. */
     private List<I_CmsResourceInit> m_resourceInitHandlers;
+
+    /** Value of the restrict-detail-contents option. */
+    private String m_restrictDetailContents;
 
     /** The runtime info factory. */
     private I_CmsDbContextFactory m_runtimeInfoFactory;
@@ -589,8 +669,25 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
     /** The temporary file project id. */
     private int m_tempFileProjectId;
 
+    /** The user session mode. */
+    private UserSessionMode m_userSessionMode;
+
     /** The configured validation handler. */
     private String m_validationHandler;
+
+    /** The configured workflow manager. */
+    private I_CmsWorkflowManager m_workflowManager;
+
+    /**
+     * Adds an ADE configuration parameter.<p>
+     *
+     * @param name the parameter name
+     * @param value the parameter value
+     */
+    public void addAdeParameter(String name, String value) {
+
+        m_adeParameters.put(name, value);
+    }
 
     /**
      * @see org.opencms.configuration.I_CmsConfigurationParameterHandler#addConfigurationParameter(java.lang.String, java.lang.String)
@@ -603,7 +700,7 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
 
     /**
      * Adds the event manager class.<p>
-     * 
+     *
      * @param clazz the class name of event manager class  to instantiate and add
      */
     public void addEventManager(String clazz) {
@@ -611,9 +708,8 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
         try {
             m_eventManager = (CmsEventManager)Class.forName(clazz).newInstance();
             if (CmsLog.INIT.isInfoEnabled()) {
-                CmsLog.INIT.info(Messages.get().getBundle().key(
-                    Messages.INIT_EVENTMANAGER_CLASS_SUCCESS_1,
-                    m_eventManager));
+                CmsLog.INIT.info(
+                    Messages.get().getBundle().key(Messages.INIT_EVENTMANAGER_CLASS_SUCCESS_1, m_eventManager));
             }
         } catch (Throwable t) {
             LOG.error(Messages.get().getBundle().key(Messages.INIT_EVENTMANAGER_CLASS_INVALID_1, clazz), t);
@@ -623,7 +719,7 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
 
     /**
      * Adds a new job description for the scheduler.<p>
-     * 
+     *
      * @param jobInfo the job description to add
      */
     public void addJobFromConfiguration(CmsScheduledJobInfo jobInfo) {
@@ -631,17 +727,18 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
         m_configuredJobs.add(jobInfo);
 
         if (CmsLog.INIT.isInfoEnabled()) {
-            CmsLog.INIT.info(Messages.get().getBundle().key(
-                Messages.INIT_SCHEDULER_CONFIG_JOB_3,
-                jobInfo.getJobName(),
-                jobInfo.getClassName(),
-                jobInfo.getContextInfo().getUserName()));
+            CmsLog.INIT.info(
+                Messages.get().getBundle().key(
+                    Messages.INIT_SCHEDULER_CONFIG_JOB_3,
+                    jobInfo.getJobName(),
+                    jobInfo.getClassName(),
+                    jobInfo.getContextInfo().getUserName()));
         }
     }
 
     /**
      * Adds a new instance of a request handler class.<p>
-     * 
+     *
      * @param clazz the class name of the request handler to instantiate and add
      */
     public void addRequestHandler(String clazz) {
@@ -667,7 +764,7 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
 
     /**
      * Adds a new instance of a resource init handler class.<p>
-     * 
+     *
      * @param clazz the class name of the resource init handler to instantiate and add
      */
     public void addResourceInitHandler(String clazz) {
@@ -729,6 +826,7 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
             0);
         // add time zone rule
         digester.addCallMethod("*/" + N_SYSTEM + "/" + N_I18N + "/" + N_TIMEZONE, "setTimeZone", 0);
+        digester.addCallMethod("*/" + N_SYSTEM + "/" + N_I18N + "/" + N_REUSE_ELEMENTS, "setReuseElements", 0);
 
         // add version history rules
         digester.addCallMethod("*/" + N_SYSTEM + "/" + N_VERSIONHISTORY, "setHistorySettings", 3);
@@ -742,13 +840,14 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
         digester.addSetNext("*/" + N_SYSTEM + "/" + N_MAIL, "setMailSettings");
 
         // add mail host configuration rule
-        digester.addCallMethod("*/" + N_SYSTEM + "/" + N_MAIL + "/" + N_MAILHOST, "addMailHost", 6);
+        digester.addCallMethod("*/" + N_SYSTEM + "/" + N_MAIL + "/" + N_MAILHOST, "addMailHost", 7);
         digester.addCallParam("*/" + N_SYSTEM + "/" + N_MAIL + "/" + N_MAILHOST, 0, A_NAME);
         digester.addCallParam("*/" + N_SYSTEM + "/" + N_MAIL + "/" + N_MAILHOST, 1, A_PORT);
         digester.addCallParam("*/" + N_SYSTEM + "/" + N_MAIL + "/" + N_MAILHOST, 2, A_ORDER);
         digester.addCallParam("*/" + N_SYSTEM + "/" + N_MAIL + "/" + N_MAILHOST, 3, A_PROTOCOL);
-        digester.addCallParam("*/" + N_SYSTEM + "/" + N_MAIL + "/" + N_MAILHOST, 4, A_USER);
-        digester.addCallParam("*/" + N_SYSTEM + "/" + N_MAIL + "/" + N_MAILHOST, 5, A_PASSWORD);
+        digester.addCallParam("*/" + N_SYSTEM + "/" + N_MAIL + "/" + N_MAILHOST, 4, A_SECURITY);
+        digester.addCallParam("*/" + N_SYSTEM + "/" + N_MAIL + "/" + N_MAILHOST, 5, A_USER);
+        digester.addCallParam("*/" + N_SYSTEM + "/" + N_MAIL + "/" + N_MAILHOST, 6, A_PASSWORD);
 
         // add scheduler creation rule
         digester.addCallMethod("*/" + N_SYSTEM + "/" + N_SCHEDULER, "addScheduleManager");
@@ -770,76 +869,26 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
         digester.addObjectCreate(
             "*/" + N_SYSTEM + "/" + N_SCHEDULER + "/" + N_JOB + "/" + N_CONTEXT,
             CmsContextInfo.class);
-        digester.addBeanPropertySetter("*/"
-            + N_SYSTEM
-            + "/"
-            + N_SCHEDULER
-            + "/"
-            + N_JOB
-            + "/"
-            + N_CONTEXT
-            + "/"
-            + N_USERNAME, "userName");
-        digester.addBeanPropertySetter("*/"
-            + N_SYSTEM
-            + "/"
-            + N_SCHEDULER
-            + "/"
-            + N_JOB
-            + "/"
-            + N_CONTEXT
-            + "/"
-            + N_PROJECT, "projectName");
-        digester.addBeanPropertySetter("*/"
-            + N_SYSTEM
-            + "/"
-            + N_SCHEDULER
-            + "/"
-            + N_JOB
-            + "/"
-            + N_CONTEXT
-            + "/"
-            + N_SITEROOT, "siteRoot");
-        digester.addBeanPropertySetter("*/"
-            + N_SYSTEM
-            + "/"
-            + N_SCHEDULER
-            + "/"
-            + N_JOB
-            + "/"
-            + N_CONTEXT
-            + "/"
-            + N_REQUESTEDURI, "requestedUri");
-        digester.addBeanPropertySetter("*/"
-            + N_SYSTEM
-            + "/"
-            + N_SCHEDULER
-            + "/"
-            + N_JOB
-            + "/"
-            + N_CONTEXT
-            + "/"
-            + N_LOCALE, "localeName");
-        digester.addBeanPropertySetter("*/"
-            + N_SYSTEM
-            + "/"
-            + N_SCHEDULER
-            + "/"
-            + N_JOB
-            + "/"
-            + N_CONTEXT
-            + "/"
-            + N_ENCODING);
-        digester.addBeanPropertySetter("*/"
-            + N_SYSTEM
-            + "/"
-            + N_SCHEDULER
-            + "/"
-            + N_JOB
-            + "/"
-            + N_CONTEXT
-            + "/"
-            + N_REMOTEADDR, "remoteAddr");
+        digester.addBeanPropertySetter(
+            "*/" + N_SYSTEM + "/" + N_SCHEDULER + "/" + N_JOB + "/" + N_CONTEXT + "/" + N_USERNAME,
+            "userName");
+        digester.addBeanPropertySetter(
+            "*/" + N_SYSTEM + "/" + N_SCHEDULER + "/" + N_JOB + "/" + N_CONTEXT + "/" + N_PROJECT,
+            "projectName");
+        digester.addBeanPropertySetter(
+            "*/" + N_SYSTEM + "/" + N_SCHEDULER + "/" + N_JOB + "/" + N_CONTEXT + "/" + N_SITEROOT,
+            "siteRoot");
+        digester.addBeanPropertySetter(
+            "*/" + N_SYSTEM + "/" + N_SCHEDULER + "/" + N_JOB + "/" + N_CONTEXT + "/" + N_REQUESTEDURI,
+            "requestedUri");
+        digester.addBeanPropertySetter(
+            "*/" + N_SYSTEM + "/" + N_SCHEDULER + "/" + N_JOB + "/" + N_CONTEXT + "/" + N_LOCALE,
+            "localeName");
+        digester.addBeanPropertySetter(
+            "*/" + N_SYSTEM + "/" + N_SCHEDULER + "/" + N_JOB + "/" + N_CONTEXT + "/" + N_ENCODING);
+        digester.addBeanPropertySetter(
+            "*/" + N_SYSTEM + "/" + N_SCHEDULER + "/" + N_JOB + "/" + N_CONTEXT + "/" + N_REMOTEADDR,
+            "remoteAddr");
         digester.addSetNext("*/" + N_SYSTEM + "/" + N_SCHEDULER + "/" + N_JOB + "/" + N_CONTEXT, "setContextInfo");
 
         // add generic parameter rules (used for jobs, password handler)
@@ -884,10 +933,14 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
         digester.addCallParam("*/" + N_SYSTEM + "/" + N_VALIDATIONHANDLER, 0, A_CLASS);
 
         // add login manager creation rules
-        digester.addCallMethod("*/" + N_LOGINMANAGER, "setLoginManager", 3);
+        digester.addCallMethod("*/" + N_LOGINMANAGER, "setLoginManager", 7);
         digester.addCallParam("*/" + N_LOGINMANAGER + "/" + N_DISABLEMINUTES, 0);
         digester.addCallParam("*/" + N_LOGINMANAGER + "/" + N_MAXBADATTEMPTS, 1);
         digester.addCallParam("*/" + N_LOGINMANAGER + "/" + N_ENABLESCURITY, 2);
+        digester.addCallParam("*/" + N_LOGINMANAGER + "/" + N_TOKEN_LIFETIME, 3);
+        digester.addCallParam("*/" + N_LOGINMANAGER + "/" + N_MAX_INACTIVE_TIME, 4);
+        digester.addCallParam("*/" + N_LOGINMANAGER + "/" + N_PASSWORD_CHANGE_INTERVAL, 5);
+        digester.addCallParam("*/" + N_LOGINMANAGER + "/" + N_USER_DATA_CHECK_INTERVAL, 6);
 
         // add login message creation rules
         digester.addObjectCreate("*/" + N_LOGINMESSAGE, CmsLoginMessage.class);
@@ -898,20 +951,32 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
         digester.addBeanPropertySetter("*/" + N_LOGINMESSAGE + "/" + N_TIMEEND);
         digester.addSetNext("*/" + N_LOGINMESSAGE, "setLoginMessage");
 
-        // add site configuration rule        
+        // add site configuration rule
         digester.addObjectCreate("*/" + N_SYSTEM + "/" + N_SITES, CmsSiteManagerImpl.class);
-        digester.addCallMethod("*/" + N_SYSTEM + "/" + N_SITES + "/" + N_WORKPLACE_SERVER, "setWorkplaceServer", 0);
+        digester.addCallMethod("*/" + N_SYSTEM + "/" + N_SITES + "/" + N_WORKPLACE_SERVER, "addWorkplaceServer", 0);
         digester.addCallMethod("*/" + N_SYSTEM + "/" + N_SITES + "/" + N_DEFAULT_URI, "setDefaultUri", 0);
         digester.addSetNext("*/" + N_SYSTEM + "/" + N_SITES, "setSiteManager");
 
         // add site configuration rule
-        digester.addCallMethod("*/" + N_SYSTEM + "/" + N_SITES + "/" + N_SITE, "addSite", 5);
-        digester.addCallParam("*/" + N_SYSTEM + "/" + N_SITES + "/" + N_SITE, 0, A_SERVER);
-        digester.addCallParam("*/" + N_SYSTEM + "/" + N_SITES + "/" + N_SITE, 1, A_URI);
-        digester.addCallParam("*/" + N_SYSTEM + "/" + N_SITES + "/" + N_SITE + "/" + N_SECURE, 2, A_SERVER);
-        digester.addCallParam("*/" + N_SYSTEM + "/" + N_SITES + "/" + N_SITE + "/" + N_SECURE, 3, A_EXCLUSIVE);
-        digester.addCallParam("*/" + N_SYSTEM + "/" + N_SITES + "/" + N_SITE + "/" + N_SECURE, 4, A_ERROR);
+        String siteXpath = "*/" + N_SYSTEM + "/" + N_SITES + "/" + N_SITE;
 
+        digester.addCallMethod(siteXpath, "addSite", 10);
+        digester.addCallParam(siteXpath, 0, A_SERVER);
+        digester.addCallParam(siteXpath, 1, A_URI);
+        digester.addCallParam(siteXpath, 2, A_TITLE);
+        digester.addCallParam(siteXpath, 3, A_POSITION);
+        digester.addCallParam(siteXpath, 4, A_ERROR_PAGE);
+        digester.addCallParam(siteXpath, 5, A_WEBSERVER);
+        digester.addCallParam("*/" + N_SYSTEM + "/" + N_SITES + "/" + N_SITE + "/" + N_SECURE, 6, A_SERVER);
+        digester.addCallParam("*/" + N_SYSTEM + "/" + N_SITES + "/" + N_SITE + "/" + N_SECURE, 7, A_EXCLUSIVE);
+        digester.addCallParam("*/" + N_SYSTEM + "/" + N_SITES + "/" + N_SITE + "/" + N_SECURE, 8, A_ERROR);
+        digester.addCallParam(
+            "*/" + N_SYSTEM + "/" + N_SITES + "/" + N_SITE + "/" + N_SECURE,
+            9,
+            A_USE_PERMANENT_REDIRECTS);
+        digester.addCallMethod(siteXpath + "/" + N_PARAMETERS + "/" + N_PARAM, "addParamToConfigSite", 2);
+        digester.addCallParam(siteXpath + "/" + N_PARAMETERS + "/" + N_PARAM, 0, A_NAME);
+        digester.addCallParam(siteXpath + "/" + N_PARAMETERS + "/" + N_PARAM, 1);
         // add an alias to the currently configured site
         digester.addCallMethod(
             "*/" + N_SYSTEM + "/" + N_SITES + "/" + N_SITE + "/" + N_ALIAS,
@@ -922,7 +987,7 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
 
         digester.addCallMethod("*/" + N_SYSTEM + "/" + N_SITES + "/" + N_SHARED_FOLDER, "setSharedFolder", 0);
 
-        // add compatibility parameter rules 
+        // add compatibility parameter rules
         digester.addCallMethod(
             "*/" + N_SYSTEM + "/" + N_RUNTIMEPROPERTIES + "/" + N_PARAM,
             I_CmsConfigurationParameterHandler.ADD_PARAMETER_METHOD,
@@ -941,21 +1006,20 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
         digester.addCallParam("*/" + N_SYSTEM + "/" + N_RUNTIMECLASSES + "/" + N_RUNTIMEINFO, 0, A_CLASS);
 
         // add default users rule
-        digester.addCallMethod("*/" + N_SYSTEM + "/" + N_DEFAULTUSERS, "setCmsDefaultUsers", 8);
+        digester.addCallMethod("*/" + N_SYSTEM + "/" + N_DEFAULTUSERS, "setCmsDefaultUsers", 7);
         digester.addCallParam("*/" + N_SYSTEM + "/" + N_DEFAULTUSERS + "/" + N_USER_ADMIN, 0);
         digester.addCallParam("*/" + N_SYSTEM + "/" + N_DEFAULTUSERS + "/" + N_USER_GUEST, 1);
         digester.addCallParam("*/" + N_SYSTEM + "/" + N_DEFAULTUSERS + "/" + N_USER_EXPORT, 2);
         digester.addCallParam("*/" + N_SYSTEM + "/" + N_DEFAULTUSERS + "/" + N_USER_DELETEDRESOURCE, 3);
         digester.addCallParam("*/" + N_SYSTEM + "/" + N_DEFAULTUSERS + "/" + N_GROUP_ADMINISTRATORS, 4);
-        digester.addCallParam("*/" + N_SYSTEM + "/" + N_DEFAULTUSERS + "/" + N_GROUP_PROJECTMANAGERS, 5);
-        digester.addCallParam("*/" + N_SYSTEM + "/" + N_DEFAULTUSERS + "/" + N_GROUP_USERS, 6);
-        digester.addCallParam("*/" + N_SYSTEM + "/" + N_DEFAULTUSERS + "/" + N_GROUP_GUESTS, 7);
+        digester.addCallParam("*/" + N_SYSTEM + "/" + N_DEFAULTUSERS + "/" + N_GROUP_USERS, 5);
+        digester.addCallParam("*/" + N_SYSTEM + "/" + N_DEFAULTUSERS + "/" + N_GROUP_GUESTS, 6);
 
         // add defaultContentEncoding rule
         digester.addCallMethod("*/" + N_SYSTEM + "/" + N_DEFAULT_CONTENT_ENCODING, "setDefaultContentEncoding", 1);
         digester.addCallParam("*/" + N_SYSTEM + "/" + N_DEFAULT_CONTENT_ENCODING, 0);
 
-        // add memorymonitor configuration rule        
+        // add memorymonitor configuration rule
         digester.addObjectCreate("*/" + N_SYSTEM + "/" + N_MEMORYMONITOR, CmsMemoryMonitorConfiguration.class);
         digester.addCallMethod("*/" + N_SYSTEM + "/" + N_MEMORYMONITOR, "initialize", 5);
         digester.addCallParam("*/" + N_SYSTEM + "/" + N_MEMORYMONITOR, 0, A_CLASS);
@@ -972,7 +1036,7 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
         // set the MemoryMonitorConfiguration initialized once before
         digester.addSetNext("*/" + N_SYSTEM + "/" + N_MEMORYMONITOR, "setCmsMemoryMonitorConfiguration");
 
-        // add flexcache configuration rule        
+        // add flexcache configuration rule
         digester.addObjectCreate("*/" + N_SYSTEM + "/" + N_FLEXCACHE, CmsFlexCacheConfiguration.class);
         digester.addCallMethod("*/" + N_SYSTEM + "/" + N_FLEXCACHE, "initialize", 6);
         digester.addCallParam("*/" + N_SYSTEM + "/" + N_FLEXCACHE + "/" + N_CACHE_ENABLED, 0);
@@ -1068,7 +1132,7 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
         digester.addCallMethod("*/" + N_SYSTEM + "/" + N_AUTHORIZATIONHANDLER, "setAuthorizationHandler", 1);
         digester.addCallParam("*/" + N_SYSTEM + "/" + N_AUTHORIZATIONHANDLER, 0, A_CLASS);
 
-        // add publish manager configuration rule        
+        // add publish manager configuration rule
         digester.addObjectCreate("*/" + N_SYSTEM + "/" + N_PUBLISHMANAGER, CmsPublishManager.class);
         digester.addCallMethod(
             "*/" + N_SYSTEM + "/" + N_PUBLISHMANAGER + "/" + N_HISTORYSIZE,
@@ -1105,7 +1169,10 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
             "*/" + N_SYSTEM + "/" + N_SERVLETCONTAINERSETTINGS + "/" + N_REQUESTERRORPAGEATTRIBUTE,
             "setRequestErrorPageAttribute",
             0);
-        digester.addCallMethod("*/" + N_SYSTEM + "/" + N_SERVLETCONTAINERSETTINGS, "setServletContainerSettingsMode", 1);
+        digester.addCallMethod(
+            "*/" + N_SYSTEM + "/" + N_SERVLETCONTAINERSETTINGS,
+            "setServletContainerSettingsMode",
+            1);
         digester.addCallParam("*/" + N_SYSTEM + "/" + N_SERVLETCONTAINERSETTINGS, 0, A_MODE);
 
         // add rule for ADE cache settings
@@ -1124,6 +1191,11 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
         // set the settings
         digester.addSetNext(adeCachePath, "setAdeCacheSettings");
 
+        String adeParamPath = "*/" + N_SYSTEM + "/" + N_ADE + "/" + N_PARAMETERS + "/" + N_PARAM;
+        digester.addCallMethod(adeParamPath, "addAdeParameter", 2);
+        digester.addCallParam(adeParamPath, 0, I_CmsXmlConfiguration.A_NAME);
+        digester.addCallParam(adeParamPath, 1);
+
         // add rule for subscription manager settings
         digester.addObjectCreate("*/" + N_SYSTEM + "/" + N_SUBSCRIPTIONMANAGER, CmsSubscriptionManager.class);
         digester.addCallMethod("*/" + N_SYSTEM + "/" + N_SUBSCRIPTIONMANAGER, "setEnabled", 1);
@@ -1133,6 +1205,28 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
         digester.addCallMethod("*/" + N_SYSTEM + "/" + N_SUBSCRIPTIONMANAGER, "setMaxVisitedCount", 1);
         digester.addCallParam("*/" + N_SYSTEM + "/" + N_SUBSCRIPTIONMANAGER, 0, A_MAXVISITED);
         digester.addSetNext("*/" + N_SYSTEM + "/" + N_SUBSCRIPTIONMANAGER, "setSubscriptionManager");
+
+        digester.addCallMethod("*/" + N_SYSTEM + "/" + N_PUBLISH_LIST_REMOVE_MODE, "setPublishListRemoveMode", 1);
+        digester.addCallParam("*/" + N_SYSTEM + "/" + N_PUBLISH_LIST_REMOVE_MODE, 0, A_MODE);
+
+        String workflowXpath = "*/" + N_SYSTEM + "/" + N_WORKFLOW;
+        digester.addObjectCreate(workflowXpath, CmsDefaultWorkflowManager.class.getName(), A_CLASS);
+        digester.addObjectCreate(workflowXpath + "/" + N_PARAMETERS, LinkedHashMap.class);
+        digester.addCallMethod(workflowXpath + "/" + N_PARAMETERS + "/" + N_PARAM, "put", 2);
+        digester.addCallParam(workflowXpath + "/" + N_PARAMETERS + "/" + N_PARAM, 0, A_NAME);
+        digester.addCallParam(workflowXpath + "/" + N_PARAMETERS + "/" + N_PARAM, 1);
+        digester.addSetNext(workflowXpath + "/" + N_PARAMETERS, "setParameters");
+        digester.addSetNext(workflowXpath, "setWorkflowManager");
+
+        String userSessionPath = "*/" + N_SYSTEM + "/" + N_USER_SESSION_MODE;
+        digester.addCallMethod(userSessionPath, "setUserSessionMode", 0);
+
+        String credentialsResolverPath = "*/" + N_SYSTEM + "/" + N_CREDENTIALS_RESOLVER;
+        digester.addCallMethod(credentialsResolverPath, "setCredentialsResolver", 0);
+
+        digester.addCallMethod("*/" + N_SYSTEM + "/" + N_RESTRICT_DETAIL_CONTENTS, "setRestrictDetailContents", 1);
+        digester.addCallParam("*/" + N_SYSTEM + "/" + N_RESTRICT_DETAIL_CONTENTS, 0);
+
     }
 
     /**
@@ -1176,6 +1270,9 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
             localesElement.addElement(N_LOCALE).setText(loc.next().toString());
         }
         i18nElement.addElement(N_TIMEZONE).setText(m_localeManager.getTimeZone().getID());
+        if (null != m_localeManager.getReuseElementsStr()) {
+            i18nElement.addElement(N_REUSE_ELEMENTS).setText(m_localeManager.getReuseElementsStr());
+        }
 
         // mail nodes
         Element mailElement = systemElement.addElement(N_MAIL);
@@ -1183,11 +1280,13 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
         Iterator<CmsMailHost> hosts = m_mailSettings.getMailHosts().iterator();
         while (hosts.hasNext()) {
             CmsMailHost host = hosts.next();
-            Element hostElement = mailElement.addElement(N_MAILHOST).addAttribute(A_NAME, host.getHostname()).addAttribute(
-                A_PORT,
-                Integer.toString(host.getPort())).addAttribute(A_ORDER, host.getOrder().toString()).addAttribute(
-                A_PROTOCOL,
-                host.getProtocol());
+            Element hostElement = mailElement.addElement(N_MAILHOST).addAttribute(
+                A_NAME,
+                host.getHostname()).addAttribute(A_PORT, Integer.toString(host.getPort())).addAttribute(
+                    A_ORDER,
+                    host.getOrder().toString()).addAttribute(A_PROTOCOL, host.getProtocol()).addAttribute(
+                        A_SECURITY,
+                        host.getSecurity());
             if (host.isAuthenticating()) {
                 hostElement.addAttribute(A_USER, host.getUsername()).addAttribute(A_PASSWORD, host.getPassword());
             }
@@ -1271,6 +1370,23 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
             managerElement.addElement(N_DISABLEMINUTES).addText(String.valueOf(m_loginManager.getDisableMinutes()));
             managerElement.addElement(N_MAXBADATTEMPTS).addText(String.valueOf(m_loginManager.getMaxBadAttempts()));
             managerElement.addElement(N_ENABLESCURITY).addText(String.valueOf(m_loginManager.isEnableSecurity()));
+            String tokenLifetimeStr = m_loginManager.getTokenLifetimeStr();
+            if (tokenLifetimeStr != null) {
+                managerElement.addElement(N_TOKEN_LIFETIME).addText(tokenLifetimeStr);
+            }
+            if (m_loginManager.getMaxInactive() != null) {
+                managerElement.addElement(N_MAX_INACTIVE_TIME).addText(m_loginManager.getMaxInactive());
+            }
+
+            if (m_loginManager.getPasswordChangeIntervalStr() != null) {
+                managerElement.addElement(N_PASSWORD_CHANGE_INTERVAL).addText(
+                    m_loginManager.getPasswordChangeIntervalStr());
+            }
+
+            if (m_loginManager.getUserDataCheckIntervalStr() != null) {
+                managerElement.addElement(N_USER_DATA_CHECK_INTERVAL).addText(
+                    m_loginManager.getUserDataCheckIntervalStr());
+            }
         }
 
         // login message
@@ -1287,9 +1403,11 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
             }
         }
 
-        // create <sites> node 
+        // create <sites> node
         Element sitesElement = systemElement.addElement(N_SITES);
-        sitesElement.addElement(N_WORKPLACE_SERVER).addText(m_siteManager.getWorkplaceServer());
+        for (String server : m_siteManager.getWorkplaceServers()) {
+            sitesElement.addElement(N_WORKPLACE_SERVER).addText(server);
+        }
         sitesElement.addElement(N_DEFAULT_URI).addText(m_siteManager.getDefaultUri());
         String sharedFolder = m_siteManager.getSharedFolder();
         if (sharedFolder != null) {
@@ -1303,14 +1421,31 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
 
             siteElement.addAttribute(A_SERVER, site.getSiteMatcher().toString());
             siteElement.addAttribute(A_URI, site.getSiteRoot().concat("/"));
-            // create <secure server=""/> subnode            
+            siteElement.addAttribute(A_TITLE, site.getTitle());
+            siteElement.addAttribute(A_POSITION, Float.toString(site.getPosition()));
+            siteElement.addAttribute(A_ERROR_PAGE, site.getErrorPage());
+            siteElement.addAttribute(A_WEBSERVER, String.valueOf(site.isWebserver()));
+
+            // create <secure server=""/> subnode
             if (site.hasSecureServer()) {
                 Element secureElem = siteElement.addElement(N_SECURE);
                 secureElem.addAttribute(A_SERVER, site.getSecureUrl());
-                secureElem.addAttribute(A_EXCLUSIVE, "" + site.isExclusiveUrl());
-                secureElem.addAttribute(A_ERROR, "" + site.isExclusiveError());
+
+                secureElem.addAttribute(A_EXCLUSIVE, String.valueOf(site.isExclusiveUrl()));
+                secureElem.addAttribute(A_ERROR, String.valueOf(site.isExclusiveError()));
+                if (site.usesPermanentRedirects()) {
+                    secureElem.addAttribute(A_USE_PERMANENT_REDIRECTS, Boolean.TRUE.toString());
+                }
             }
-            // create <alias server=""/> subnode(s)            
+            if ((site.getParameters() != null) && !site.getParameters().isEmpty()) {
+                Element parametersElem = siteElement.addElement(N_PARAMETERS);
+                for (Map.Entry<String, String> entry : site.getParameters().entrySet()) {
+                    Element paramElem = parametersElem.addElement(N_PARAM);
+                    paramElem.addAttribute(A_NAME, entry.getKey());
+                    paramElem.addText(entry.getValue());
+                }
+            }
+            // create <alias server=""/> subnode(s)
             Iterator<CmsSiteMatcher> aliasIterator = site.getAliases().iterator();
             while (aliasIterator.hasNext()) {
                 CmsSiteMatcher matcher = aliasIterator.next();
@@ -1355,8 +1490,6 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
         }
         // create <group-administrators> subnode
         defaultusersElement.addElement(N_GROUP_ADMINISTRATORS).addText(m_cmsDefaultUsers.getGroupAdministrators());
-        // create <group-projectmanagers> subnode
-        defaultusersElement.addElement(N_GROUP_PROJECTMANAGERS).addText(m_cmsDefaultUsers.getGroupProjectmanagers());
         // create <group-users> subnode
         defaultusersElement.addElement(N_GROUP_USERS).addText(m_cmsDefaultUsers.getGroupUsers());
         // create <group-guests> subnode
@@ -1518,10 +1651,20 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
         }
 
         // ADE settings
-        if ((getAdeConfiguration() != null) || (getAdeCacheSettings() != null)) {
+        if ((getAdeConfiguration() != null) || (getAdeCacheSettings() != null) || !m_adeParameters.isEmpty()) {
             Element adeElem = systemElement.addElement(N_ADE);
             if (getAdeConfiguration() != null) {
                 adeElem.addElement(N_CONFIGURATION).addAttribute(A_CLASS, getAdeConfiguration());
+            }
+            if (!m_adeParameters.isEmpty()) {
+                Element paramsElement = adeElem.addElement(N_PARAMETERS);
+                for (Map.Entry<String, String> entry : m_adeParameters.entrySet()) {
+                    String name = entry.getKey();
+                    String value = entry.getValue();
+                    Element paramElement = paramsElement.addElement(N_PARAM);
+                    paramElement.addAttribute(N_NAME, name);
+                    paramElement.setText(value);
+                }
             }
             if (getAdeCacheSettings() != null) {
                 Element cacheElem = adeElem.addElement(N_ADE_CACHE);
@@ -1531,9 +1674,12 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
                 cntPageCacheElem.addAttribute(A_ONLINE, "" + getAdeCacheSettings().getContainerPageOnlineSize());
                 // group-container cache
                 Element groupContainerCacheElem = cacheElem.addElement(N_GROUPCONTAINERS);
-                groupContainerCacheElem.addAttribute(A_OFFLINE, ""
-                    + getAdeCacheSettings().getGroupContainerOfflineSize());
-                groupContainerCacheElem.addAttribute(A_ONLINE, "" + getAdeCacheSettings().getGroupContainerOnlineSize());
+                groupContainerCacheElem.addAttribute(
+                    A_OFFLINE,
+                    "" + getAdeCacheSettings().getGroupContainerOfflineSize());
+                groupContainerCacheElem.addAttribute(
+                    A_ONLINE,
+                    "" + getAdeCacheSettings().getGroupContainerOnlineSize());
             }
         }
 
@@ -1543,6 +1689,37 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
             subscrManElem.addAttribute(A_ENABLED, Boolean.toString(getSubscriptionManager().isEnabled()));
             subscrManElem.addAttribute(A_POOLNAME, getSubscriptionManager().getPoolName());
             subscrManElem.addAttribute(A_MAXVISITED, String.valueOf(getSubscriptionManager().getMaxVisitedCount()));
+        }
+
+        I_CmsWorkflowManager workflowMan = getWorkflowManager();
+        if (workflowMan != null) {
+            Element workflowElem = systemElement.addElement(N_WORKFLOW);
+            workflowElem.addAttribute(A_CLASS, workflowMan.getClass().getName());
+            Map<String, String> parameters = workflowMan.getParameters();
+            Element parametersElem = workflowElem.addElement(N_PARAMETERS);
+            for (Map.Entry<String, String> entry : parameters.entrySet()) {
+                Element paramElem = parametersElem.addElement(N_PARAM);
+                paramElem.addAttribute(A_NAME, entry.getKey());
+                paramElem.addText(entry.getValue());
+            }
+        }
+
+        if (m_userSessionMode != null) {
+            Element userSessionElem = systemElement.addElement(N_USER_SESSION_MODE);
+            userSessionElem.setText(m_userSessionMode.toString());
+        }
+
+        if (m_credentialsResolverClass != null) {
+            systemElement.addElement(N_CREDENTIALS_RESOLVER).setText(m_credentialsResolverClass);
+        }
+
+        if (m_publishListRemoveMode != null) {
+            systemElement.addElement(N_PUBLISH_LIST_REMOVE_MODE).addAttribute(A_MODE, m_publishListRemoveMode);
+        }
+
+        if (m_restrictDetailContents != null) {
+            Element restrictDetailContentsElem = systemElement.addElement(N_RESTRICT_DETAIL_CONTENTS);
+            restrictDetailContentsElem.addText(m_restrictDetailContents);
         }
 
         // return the system node
@@ -1570,8 +1747,18 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
     }
 
     /**
+     * Gets the ADE configuration parameters.<p>
+     *
+     * @return the ADE configuration parameters
+     */
+    public Map<String, String> getAdeParameters() {
+
+        return m_adeParameters;
+    }
+
+    /**
      * Returns an instance of the configured authorization handler.<p>
-     * 
+     *
      * @return an instance of the configured authorization handler
      */
     public I_CmsAuthorizationHandler getAuthorizationHandler() {
@@ -1583,9 +1770,10 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
             I_CmsAuthorizationHandler authorizationHandler = (I_CmsAuthorizationHandler)Class.forName(
                 m_authorizationHandler).newInstance();
             if (LOG.isInfoEnabled()) {
-                LOG.info(Messages.get().getBundle().key(
-                    Messages.INIT_AUTHORIZATION_HANDLER_CLASS_SUCCESS_1,
-                    m_authorizationHandler));
+                LOG.info(
+                    Messages.get().getBundle().key(
+                        Messages.INIT_AUTHORIZATION_HANDLER_CLASS_SUCCESS_1,
+                        m_authorizationHandler));
             }
             authorizationHandler.setParameters(m_runtimeProperties);
             return authorizationHandler;
@@ -1640,6 +1828,29 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
     }
 
     /**
+     * Gets the credentials resolver.<p>
+     *
+     * @return the credentials resolver
+     */
+    public I_CmsCredentialsResolver getCredentialsResolver() {
+
+        if (m_credentialsResolver == null) {
+            m_credentialsResolver = new CmsDefaultCredentialsResolver();
+        }
+        return m_credentialsResolver;
+    }
+
+    /**
+     * Gets the configured credentials resolver class name (null if no class is explicity configured).<p>
+     *
+     * @return the name of the configured credentials resolver class
+     */
+    public String getCredentialsResolverClass() {
+
+        return m_credentialsResolverClass;
+    }
+
+    /**
      * Returns the defaultContentEncoding.<p>
      *
      * @return the defaultContentEncoding
@@ -1659,7 +1870,7 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
 
     /**
      * Returns the configured OpenCms event manager instance.<p>
-     * 
+     *
      * @return the configured OpenCms event manager instance
      */
     public CmsEventManager getEventManager() {
@@ -1669,11 +1880,11 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
 
     /**
      * Returns the maximum number of versions that are kept per resource in the VFS version history.<p>
-     * 
+     *
      * If the version history is disabled, this setting has no effect.<p>
-     * 
+     *
      * @return the maximum number of versions that are kept per resource
-     * 
+     *
      * @see #isHistoryEnabled()
      */
     public int getHistoryVersions() {
@@ -1683,11 +1894,11 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
 
     /**
      * Returns the maximum number of versions that are kept in the VFS version history for deleted resources.<p>
-     * 
+     *
      * If the version history is disabled, this setting has no effect.<p>
-     * 
+     *
      * @return the maximum number of versions that are kept for deleted resources
-     * 
+     *
      * @see #isHistoryEnabled()
      */
     public int getHistoryVersionsAfterDeletion() {
@@ -1707,7 +1918,7 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
 
     /**
      * Returns the configured locale manager for multi language support.<p>
-     * 
+     *
      * @return the configured locale manager for multi language support
      */
     public CmsLocaleManager getLocaleManager() {
@@ -1727,7 +1938,11 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
             m_loginManager = new CmsLoginManager(
                 CmsLoginManager.DISABLE_MINUTES_DEFAULT,
                 CmsLoginManager.MAX_BAD_ATTEMPTS_DEFAULT,
-                CmsLoginManager.ENABLE_SECURITY_DEFAULT);
+                CmsLoginManager.ENABLE_SECURITY_DEFAULT,
+                null,
+                null,
+                null,
+                null);
         }
         if (m_loginMessage != null) {
             // null OpenCms object is ok during configuration
@@ -1742,7 +1957,7 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
 
     /**
      * Returns the configured mail settings.<p>
-     * 
+     *
      * @return the configured mail settings
      */
     public CmsMailSettings getMailSettings() {
@@ -1752,7 +1967,7 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
 
     /**
      * Returns the project in which timestamps for the content notification are read.<p>
-     * 
+     *
      * @return the project in which timestamps for the content notification are read
      */
     public String getNotificationProject() {
@@ -1762,7 +1977,7 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
 
     /**
      * Returns the duration after which responsibles will be notified about out-dated content (in days).<p>
-     * 
+     *
      * @return the duration after which responsibles will be notified about out-dated content
      */
     public int getNotificationTime() {
@@ -1776,7 +1991,7 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
 
     /**
      * Returns the configured password handler.<p>
-     * 
+     *
      * @return the configured password handler
      */
     public I_CmsPasswordHandler getPasswordHandler() {
@@ -1795,8 +2010,33 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
     }
 
     /**
+     * Returns the configured publish list remove mode, or a default value if there is no configured value or an erroneous configured value.<p>
+     *
+     * @return the publish list remove mode
+     */
+    public CmsPublishManager.PublishListRemoveMode getPublishListRemoveMode() {
+
+        try {
+            // trim preserves null
+            return CmsPublishManager.PublishListRemoveMode.valueOf(StringUtils.trim(m_publishListRemoveMode));
+        } catch (Exception e) {
+            return CmsPublishManager.PublishListRemoveMode.allUsers;
+        }
+    }
+
+    /**
+     * Returns the configured publish list remove mode as a string, or null if no publish list remove mode has been configured.<p>
+     *
+     * @return the publish list remove mode string from the configuration
+     */
+    public String getPublishListRemoveModeStr() {
+
+        return m_publishListRemoveMode;
+    }
+
+    /**
      * Returns the configured publish manager.<p>
-     * 
+     *
      * @return the configured publish manager
      */
     public CmsPublishManager getPublishManager() {
@@ -1813,7 +2053,7 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
 
     /**
      * Returns the list of instantiated request handler classes.<p>
-     * 
+     *
      * @return the list of instantiated request handler classes
      */
     public List<I_CmsRequestHandler> getRequestHandlers() {
@@ -1823,7 +2063,7 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
 
     /**
      * Returns the list of instantiated resource init handler classes.<p>
-     * 
+     *
      * @return the list of instantiated resource init handler classes
      */
     public List<I_CmsResourceInit> getResourceInitHandlers() {
@@ -1833,7 +2073,7 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
 
     /**
      * Returns the runtime info factory instance.<p>
-     * 
+     *
      * @return the runtime info factory instance
      */
     public I_CmsDbContextFactory getRuntimeInfoFactory() {
@@ -1863,7 +2103,7 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
 
     /**
      * Returns an instance of the configured session storage provider.<p>
-     * 
+     *
      * @return an instance of the configured session storage provider
      */
     public I_CmsSessionStorageProvider getSessionStorageProvider() {
@@ -1875,9 +2115,10 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
             I_CmsSessionStorageProvider sessionCacheProvider = (I_CmsSessionStorageProvider)Class.forName(
                 m_sessionStorageProvider).newInstance();
             if (CmsLog.INIT.isInfoEnabled()) {
-                CmsLog.INIT.info(Messages.get().getBundle().key(
-                    Messages.INIT_SESSION_STORAGEPROVIDER_SUCCESS_1,
-                    m_sessionStorageProvider));
+                CmsLog.INIT.info(
+                    Messages.get().getBundle().key(
+                        Messages.INIT_SESSION_STORAGEPROVIDER_SUCCESS_1,
+                        m_sessionStorageProvider));
             }
             return sessionCacheProvider;
         } catch (Throwable t) {
@@ -1902,7 +2143,7 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
 
     /**
      * Returns the configured subscription manager.<p>
-     * 
+     *
      * @return the configured subscription manager
      */
     public CmsSubscriptionManager getSubscriptionManager() {
@@ -1916,7 +2157,7 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
 
     /**
      * Returns temporary file project id.<p>
-     * 
+     *
      * @return temporary file project id
      */
     public int getTempFileProjectId() {
@@ -1925,8 +2166,26 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
     }
 
     /**
+     * Gets the user session mode.<p>
+     *
+     * @param useDefault if true, and no user session mode was configured, this will return the default value
+     *
+     * @return the user session mode
+     */
+    public UserSessionMode getUserSessionMode(boolean useDefault) {
+
+        if (m_userSessionMode != null) {
+            return m_userSessionMode;
+        } else if (useDefault) {
+            return DEFAULT_USER_SESSION_MODE;
+        } else {
+            return null;
+        }
+    }
+
+    /**
      * Returns an instance of the configured validation handler.<p>
-     * 
+     *
      * @return an instance of the configured validation handler
      */
     public I_CmsValidationHandler getValidationHandler() {
@@ -1935,11 +2194,13 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
             return new CmsDefaultValidationHandler();
         }
         try {
-            I_CmsValidationHandler validationHandler = (I_CmsValidationHandler)Class.forName(m_validationHandler).newInstance();
+            I_CmsValidationHandler validationHandler = (I_CmsValidationHandler)Class.forName(
+                m_validationHandler).newInstance();
             if (LOG.isInfoEnabled()) {
-                LOG.info(Messages.get().getBundle().key(
-                    Messages.INIT_VALIDATION_HANDLER_CLASS_SUCCESS_1,
-                    m_validationHandler));
+                LOG.info(
+                    Messages.get().getBundle().key(
+                        Messages.INIT_VALIDATION_HANDLER_CLASS_SUCCESS_1,
+                        m_validationHandler));
             }
             return validationHandler;
         } catch (Throwable t) {
@@ -1951,7 +2212,17 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
     }
 
     /**
-     * Will be called when configuration of this object is finished.<p> 
+     * Gets the configured workflow manager instance.<p>
+     *
+     * @return the configured workflow manager instance.
+     */
+    public I_CmsWorkflowManager getWorkflowManager() {
+
+        return m_workflowManager;
+    }
+
+    /**
+     * Will be called when configuration of this object is finished.<p>
      */
     public void initializeFinished() {
 
@@ -1961,13 +2232,24 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
     }
 
     /**
-     * Returns if the VFS version history is enabled.<p> 
-     * 
+     * Returns if the VFS version history is enabled.<p>
+     *
      * @return if the VFS version history is enabled
      */
     public boolean isHistoryEnabled() {
 
         return m_historyEnabled;
+    }
+
+    /**
+     * Returns true if detail contents are restricted to detail pages from the same site.<p>
+     *
+     * @return true if detail contents are restricted to detail pages from the same site
+     */
+    public boolean isRestrictDetailContents() {
+
+        return (m_restrictDetailContents == null) || Boolean.parseBoolean(m_restrictDetailContents.trim());
+
     }
 
     /**
@@ -1992,7 +2274,7 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
 
     /**
      * Sets the authorization handler.<p>
-     * 
+     *
      * @param authorizationHandlerClass the authorization handler class to set.
      */
     public void setAuthorizationHandler(String authorizationHandlerClass) {
@@ -2012,13 +2294,12 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
 
     /**
      * Sets the CmsDefaultUsers.<p>
-     * 
+     *
      * @param userAdmin the name of the default admin user
      * @param userGuest the name of the guest user
      * @param userExport the name of the export user
      * @param userDeletedResource the name of the deleted resource user, can be <code>null</code>
      * @param groupAdministrators the name of the administrators group
-     * @param groupProjectmanagers the name of the project managers group
      * @param groupUsers the name of the users group
      * @param groupGuests the name of the guests group
      */
@@ -2029,7 +2310,6 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
         String userExport,
         String userDeletedResource,
         String groupAdministrators,
-        String groupProjectmanagers,
         String groupUsers,
         String groupGuests) {
 
@@ -2042,35 +2322,28 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
             userExport,
             userDeletedResource,
             groupAdministrators,
-            groupProjectmanagers,
             groupUsers,
             groupGuests);
 
         if (CmsLog.INIT.isInfoEnabled()) {
-            CmsLog.INIT.info(Messages.get().getBundle().key(
-                Messages.INIT_ADMIN_USER_1,
-                m_cmsDefaultUsers.getUserAdmin()));
-            CmsLog.INIT.info(Messages.get().getBundle().key(
-                Messages.INIT_GUEST_USER_1,
-                m_cmsDefaultUsers.getUserGuest()));
-            CmsLog.INIT.info(Messages.get().getBundle().key(
-                Messages.INIT_EXPORT_USER_1,
-                m_cmsDefaultUsers.getUserExport()));
-            CmsLog.INIT.info(Messages.get().getBundle().key(
-                Messages.INIT_DELETED_RESOURCE_USER_1,
-                m_cmsDefaultUsers.getUserDeletedResource()));
-            CmsLog.INIT.info(Messages.get().getBundle().key(
-                Messages.INIT_ADMIN_GROUP_1,
-                m_cmsDefaultUsers.getGroupAdministrators()));
-            CmsLog.INIT.info(Messages.get().getBundle().key(
-                Messages.INIT_PROJECT_MANAGERS_GROUP_1,
-                m_cmsDefaultUsers.getGroupProjectmanagers()));
-            CmsLog.INIT.info(Messages.get().getBundle().key(
-                Messages.INIT_USERS_GROUP_1,
-                m_cmsDefaultUsers.getGroupUsers()));
-            CmsLog.INIT.info(Messages.get().getBundle().key(
-                Messages.INIT_GUESTS_GROUP_1,
-                m_cmsDefaultUsers.getGroupGuests()));
+            CmsLog.INIT.info(
+                Messages.get().getBundle().key(Messages.INIT_ADMIN_USER_1, m_cmsDefaultUsers.getUserAdmin()));
+            CmsLog.INIT.info(
+                Messages.get().getBundle().key(Messages.INIT_GUEST_USER_1, m_cmsDefaultUsers.getUserGuest()));
+            CmsLog.INIT.info(
+                Messages.get().getBundle().key(Messages.INIT_EXPORT_USER_1, m_cmsDefaultUsers.getUserExport()));
+            CmsLog.INIT.info(
+                Messages.get().getBundle().key(
+                    Messages.INIT_DELETED_RESOURCE_USER_1,
+                    m_cmsDefaultUsers.getUserDeletedResource()));
+            CmsLog.INIT.info(
+                Messages.get().getBundle().key(
+                    Messages.INIT_ADMIN_GROUP_1,
+                    m_cmsDefaultUsers.getGroupAdministrators()));
+            CmsLog.INIT.info(
+                Messages.get().getBundle().key(Messages.INIT_USERS_GROUP_1, m_cmsDefaultUsers.getGroupUsers()));
+            CmsLog.INIT.info(
+                Messages.get().getBundle().key(Messages.INIT_GUESTS_GROUP_1, m_cmsDefaultUsers.getGroupGuests()));
             CmsLog.INIT.info(Messages.get().getBundle().key(Messages.INIT_DEFAULT_USER_NAMES_INITIALIZED_0));
         }
     }
@@ -2096,6 +2369,22 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
     }
 
     /**
+     * Sets the credentials resolver class.<p>
+     *
+     * @param className the name of the credentials resolver class
+     *
+     * @throws Exception if something goes wrong
+     */
+    public void setCredentialsResolver(String className) throws Exception {
+
+        String originalClassName = className;
+        className = className.trim();
+        Class<?> resolverClass = Class.forName(className);
+        m_credentialsResolver = (I_CmsCredentialsResolver)(resolverClass.newInstance());
+        m_credentialsResolverClass = originalClassName;
+    }
+
+    /**
      * Sets the defaultContentEncoding.<p>
      *
      * @param defaultContentEncoding the defaultContentEncoding to set
@@ -2107,7 +2396,7 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
 
     /**
      * VFS version history settings are set here.<p>
-     * 
+     *
      * @param historyEnabled if true the history is enabled
      * @param historyVersions the maximum number of versions that are kept per VFS resource
      * @param historyVersionsAfterDeletion the maximum number of versions for deleted resources
@@ -2118,11 +2407,12 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
         m_historyVersions = Integer.valueOf(historyVersions).intValue();
         m_historyVersionsAfterDeletion = Integer.valueOf(historyVersionsAfterDeletion).intValue();
         if (CmsLog.INIT.isInfoEnabled()) {
-            CmsLog.INIT.info(Messages.get().getBundle().key(
-                Messages.INIT_HISTORY_SETTINGS_3,
-                Boolean.valueOf(m_historyEnabled),
-                new Integer(m_historyVersions),
-                new Integer(m_historyVersionsAfterDeletion)));
+            CmsLog.INIT.info(
+                Messages.get().getBundle().key(
+                    Messages.INIT_HISTORY_SETTINGS_3,
+                    Boolean.valueOf(m_historyEnabled),
+                    new Integer(m_historyVersions),
+                    new Integer(m_historyVersionsAfterDeletion)));
         }
     }
 
@@ -2138,7 +2428,7 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
 
     /**
      * Sets the locale manager for multi language support.<p>
-     * 
+     *
      * @param localeManager the locale manager to set
      */
     public void setLocaleManager(CmsLocaleManager localeManager) {
@@ -2155,8 +2445,19 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
      * @param maxBadAttemptsStr the number of allowed bad login attempts
      * @param disableMinutesStr the time an account gets locked if to many bad logins are attempted
      * @param enableSecurityStr flag to determine if the security option should be enabled on the login dialog
+     * @param tokenLifetime the token lifetime
+     * @param maxInactive maximum time since last login before CmsLockInactiveAccountsJob locks an account
+     * @param passwordChangeInterval the password change interval
+     * @param userDataCheckInterval the user data check interval
      */
-    public void setLoginManager(String disableMinutesStr, String maxBadAttemptsStr, String enableSecurityStr) {
+    public void setLoginManager(
+        String disableMinutesStr,
+        String maxBadAttemptsStr,
+        String enableSecurityStr,
+        String tokenLifetime,
+        String maxInactive,
+        String passwordChangeInterval,
+        String userDataCheckInterval) {
 
         int disableMinutes;
         try {
@@ -2171,36 +2472,45 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
             maxBadAttempts = CmsLoginManager.MAX_BAD_ATTEMPTS_DEFAULT;
         }
         boolean enableSecurity = Boolean.valueOf(enableSecurityStr).booleanValue();
-        m_loginManager = new CmsLoginManager(disableMinutes, maxBadAttempts, enableSecurity);
+        m_loginManager = new CmsLoginManager(
+            disableMinutes,
+            maxBadAttempts,
+            enableSecurity,
+            tokenLifetime,
+            maxInactive,
+            passwordChangeInterval,
+            userDataCheckInterval);
         if (CmsLog.INIT.isInfoEnabled()) {
-            CmsLog.INIT.info(Messages.get().getBundle().key(
-                Messages.INIT_LOGINMANAGER_3,
-                new Integer(disableMinutes),
-                new Integer(maxBadAttempts),
-                new Boolean(enableSecurity)));
+            CmsLog.INIT.info(
+                Messages.get().getBundle().key(
+                    Messages.INIT_LOGINMANAGER_3,
+                    new Integer(disableMinutes),
+                    new Integer(maxBadAttempts),
+                    new Boolean(enableSecurity)));
         }
     }
 
     /**
      * Adds the login message from the configuration.<p>
-     * 
+     *
      * @param message the login message to add
      */
     public void setLoginMessage(CmsLoginMessage message) {
 
         m_loginMessage = message;
         if (CmsLog.INIT.isInfoEnabled()) {
-            CmsLog.INIT.info(Messages.get().getBundle().key(
-                Messages.INIT_LOGINMESSAGE_3,
-                Boolean.valueOf(message.isEnabled()),
-                Boolean.valueOf(message.isLoginForbidden()),
-                message.getMessage()));
+            CmsLog.INIT.info(
+                Messages.get().getBundle().key(
+                    Messages.INIT_LOGINMESSAGE_3,
+                    Boolean.valueOf(message.isEnabled()),
+                    Boolean.valueOf(message.isLoginForbidden()),
+                    message.getMessage()));
         }
     }
 
     /**
      * Sets the mail settings.<p>
-     * 
+     *
      * @param mailSettings the mail settings to set.
      */
     public void setMailSettings(CmsMailSettings mailSettings) {
@@ -2213,20 +2523,21 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
 
     /**
      * Sets the project in which timestamps for the content notification are read.<p>
-     * 
+     *
      * @param notificationProject the project in which timestamps for the content notification are read
      */
     public void setNotificationProject(String notificationProject) {
 
         m_notificationProject = notificationProject;
         if (CmsLog.INIT.isInfoEnabled()) {
-            CmsLog.INIT.info(Messages.get().getBundle().key(Messages.INIT_NOTIFICATION_PROJECT_1, m_notificationProject));
+            CmsLog.INIT.info(
+                Messages.get().getBundle().key(Messages.INIT_NOTIFICATION_PROJECT_1, m_notificationProject));
         }
     }
 
     /**
      * Sets the duration after which responsibles will be notified about out-dated content (in days).<p>
-     * 
+     *
      * @param notificationTime the duration after which responsibles will be notified about out-dated content
      */
     public void setNotificationTime(String notificationTime) {
@@ -2243,16 +2554,17 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
 
     /**
      * Sets the password handler class.<p>
-     * 
+     *
      * @param passwordHandler the password handler to set
      */
     public void setPasswordHandler(I_CmsPasswordHandler passwordHandler) {
 
         m_passwordHandler = passwordHandler;
         if (CmsLog.INIT.isInfoEnabled()) {
-            CmsLog.INIT.info(Messages.get().getBundle().key(
-                Messages.INIT_PWD_HANDLER_SUCCESS_1,
-                passwordHandler.getClass().getName()));
+            CmsLog.INIT.info(
+                Messages.get().getBundle().key(
+                    Messages.INIT_PWD_HANDLER_SUCCESS_1,
+                    passwordHandler.getClass().getName()));
         }
     }
 
@@ -2268,7 +2580,7 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
 
     /**
      * Sets the servlet container specific setting.<p>
-     * 
+     *
      * @param configValue the configuration value
      */
     public void setPreventResponseFlush(String configValue) {
@@ -2278,8 +2590,18 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
     }
 
     /**
+     * Sets the publish list remove mode.<p>
+     *
+     * @param removeMode the publish list remove mode
+     */
+    public void setPublishListRemoveMode(String removeMode) {
+
+        m_publishListRemoveMode = removeMode;
+    }
+
+    /**
      * Sets the publish manager.<p>
-     * 
+     *
      * @param publishManager the publish manager
      */
     public void setPublishManager(CmsPublishManager publishManager) {
@@ -2289,7 +2611,7 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
 
     /**
      * Sets the servlet container specific setting.<p>
-     * 
+     *
      * @param configValue the configuration value
      */
     public void setReleaseTagsAfterEnd(String configValue) {
@@ -2300,7 +2622,7 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
 
     /**
      * Sets the servlet container specific setting.<p>
-     * 
+     *
      * @param configValue the configuration value
      */
     public void setRequestErrorPageAttribute(String configValue) {
@@ -2309,8 +2631,18 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
     }
 
     /**
+     * Sets the 'restrict detail contents' option.<p>
+     *
+     * @param restrictDetailContents the value of the option
+     */
+    public void setRestrictDetailContents(String restrictDetailContents) {
+
+        m_restrictDetailContents = restrictDetailContents;
+    }
+
+    /**
      * Sets the runtime info factory.<p>
-     * 
+     *
      * @param className the class name of the configured runtime info factory
      */
     public void setRuntimeInfoFactory(String className) {
@@ -2327,13 +2659,13 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
         if (objectInstance instanceof I_CmsDbContextFactory) {
             m_runtimeInfoFactory = (I_CmsDbContextFactory)objectInstance;
             if (CmsLog.INIT.isInfoEnabled()) {
-                CmsLog.INIT.info(Messages.get().getBundle().key(Messages.INIT_RUNTIME_INFO_FACTORY_SUCCESS_1, className));
+                CmsLog.INIT.info(
+                    Messages.get().getBundle().key(Messages.INIT_RUNTIME_INFO_FACTORY_SUCCESS_1, className));
             }
         } else {
             if (CmsLog.INIT.isFatalEnabled()) {
-                CmsLog.INIT.fatal(Messages.get().getBundle().key(
-                    Messages.INIT_RUNTIME_INFO_FACTORY_FAILURE_1,
-                    className));
+                CmsLog.INIT.fatal(
+                    Messages.get().getBundle().key(Messages.INIT_RUNTIME_INFO_FACTORY_FAILURE_1, className));
             }
         }
 
@@ -2341,7 +2673,7 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
 
     /**
      * Sets the servlet container settings configuration mode.<p>
-     * 
+     *
      * @param configValue the value to set
      */
     public void setServletContainerSettingsMode(String configValue) {
@@ -2351,7 +2683,7 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
 
     /**
      * Sets the session storage provider.<p>
-     * 
+     *
      * @param sessionStorageProviderClass the session storage provider class to set.
      */
     public void setSessionStorageProvider(String sessionStorageProviderClass) {
@@ -2374,7 +2706,7 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
 
     /**
      * Sets the subscription manager.<p>
-     * 
+     *
      * @param subscriptionManager the subscription manager
      */
     public void setSubscriptionManager(CmsSubscriptionManager subscriptionManager) {
@@ -2384,7 +2716,7 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
 
     /**
      * Sets the temporary file project id.<p>
-     * 
+     *
      * @param tempFileProjectId the temporary file project id to set
      */
     public void setTempFileProjectId(String tempFileProjectId) {
@@ -2395,20 +2727,42 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
             m_tempFileProjectId = -1;
         }
         if (CmsLog.INIT.isInfoEnabled()) {
-            CmsLog.INIT.info(Messages.get().getBundle().key(
-                Messages.INIT_TEMPFILE_PROJECT_ID_1,
-                new Integer(m_tempFileProjectId)));
+            CmsLog.INIT.info(
+                Messages.get().getBundle().key(Messages.INIT_TEMPFILE_PROJECT_ID_1, new Integer(m_tempFileProjectId)));
         }
     }
 
     /**
+     * Sets the user session mode.<p>
+     *
+     * @param userSessionMode the user session mode
+     */
+    public void setUserSessionMode(String userSessionMode) {
+
+        if ((userSessionMode == null) || (m_userSessionMode != null)) {
+            throw new IllegalStateException("Can't set user session mode to " + userSessionMode);
+        }
+        m_userSessionMode = UserSessionMode.valueOf(userSessionMode);
+    }
+
+    /**
      * Sets the validation handler.<p>
-     * 
+     *
      * @param validationHandlerClass the validation handler class to set.
      */
     public void setValidationHandler(String validationHandlerClass) {
 
         m_validationHandler = validationHandlerClass;
+    }
+
+    /**
+     * Sets the configured workflow manager instance.<p>
+     *
+     * @param workflowManager the configured workflow manager
+     */
+    public void setWorkflowManager(I_CmsWorkflowManager workflowManager) {
+
+        m_workflowManager = workflowManager;
     }
 
     /**
